# kodachi

./: Cargo.toml  README.md  stylua.toml
.github/workflows/: ci.yml  generate-docs.yml
config/: tmux.conf
doc/: kodachi.md  kodachi.txt
lua/kodachi/: completion.lua  composer.lua  connection.lua  events.lua  handlers.lua  init.lua  matchers.lua  prompts.lua  socket.lua  state.lua  states.lua
lua/kodachi/null-ls/: completion.lua
lua/kodachi/ui/: composer.lua  history.lua  init.lua  term.lua  window.lua
lua/kodachi/util/: state.lua
plugin/: kodachi.vim
src/: cli.rs  connection.rs  daemon.rs  logging.rs  main.rs  testbed.rs
src/app/: connections.rs  formatters.rs  history.rs  matchers.rs  mod.rs  processors.rs
src/app/completion/: completions.rs  duplex.rs  filtering.rs  markov.rs  mod.rs  recency.rs  sent.rs  tokens.rs  transforms.rs
src/app/completion/duplex/: mod.rs  weighted.rs  word_index.rs
src/app/matchers/: simple.rs
src/app/processing/: ansi.rs  mod.rs  send.rs  text.rs
src/cli/: mod.rs  stdio.rs  ui.rs
src/cli/ui/: external.rs  prompts.rs
src/collections/: markov_trie.rs  mod.rs
src/daemon/: channel.rs  commands.rs  mod.rs  notifications.rs  protocol.rs  requests.rs  responses.rs
src/daemon/handlers/: clear.rs  complete_composer.rs  configure_connection.rs  connect.rs  disconnect.rs  get_history.rs  mod.rs  register_alias.rs  register_prompt.rs  register_simple_alias.rs  register_trigger.rs  scroll_history.rs  send.rs  set_active_prompt_group.rs  set_prompt_content.rs  window_size.rs
src/daemon/input/: bufread.rs  mod.rs  replay.rs
src/daemon/notifications/: external_ui.rs
src/daemon/protocol/: commands.rs  connect.rs  cursors.rs  replay.rs
src/net/: mod.rs  readable.rs  uri.rs  writable.rs
src/transport/: mod.rs  replay.rs  telnet.rs
src/transport/telnet/: mod.rs  options.rs  processor.rs  protocol.rs
src/transport/telnet/options/: mccp.rs  mod.rs  msdp.rs  naws.rs  negotiator.rs  ttype.rs
