[package]
name = "kodachi"
version = "0.1.0"
authors = ["Daniel Leong <me@dhleong.net>"]
edition = "2021"

[dependencies]
tokio = { version = "1.15.0", features = ["io-util", "io-std", "macros", "net", "rt-multi-thread", "sync"] }

url = "2.2.2"
native-tls = "0.2.8"

delegate = "0.6.1"
regex = "1.5.4"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "3.1.7", features = ["derive"] }
bytes = "1.1.0"
crossterm = "0.23.2"
ritelinked = "0.3.2"
async-trait = "0.1.59"
