[package]
name = "kodachi"
version = "0.1.0"
authors = ["Daniel Leong <me@dhleong.net>"]
edition = "2021"

[dependencies]
tokio = { version = "1.23.0", features = ["io-util", "io-std", "macros", "net", "rt-multi-thread", "sync"] }
tokio-native-tls = "0.3.0"
# async-compression = { version = "0.3.15", features = ["tokio", "zlib"] }
async-trait = "0.1.59"
flate2 = "1.0.25"
pin-project = "1.0.12"

bytes = "1.1.0"
native-tls = "0.2.8"
url = "2.2.2"

clap = { version = "3.1.7", features = ["derive"] }
crossterm = "0.23.2"
supports-unicode = "1.0.2"
supports-color = "1.3.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

delegate = "0.6.1"
log = { version = "0.4.17", features = ["std"] }
regex = "1.5.4"
ritelinked = "0.3.2"
